--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="" media="(prefers-color-scheme: dark)" />
 </head>
 
-<body class="lg:px-14 px-5 pt-12 text-white mb-24 ">
+<body class="lg:px-14 px-5 pt-12 text-yellow-700 mb-24 w-screen h-screen bg-no-repeat bg-contain bg-center">
   <img class="w-screen " src="photo2.png" alt="">
   <div class="text-base sm1:text-lg md1:text-xl lg:text-2xl">
     <br>
